Import of SPADKINS/Business-Travel-OTA-0.53 from CPAN.
gitpan-cpan-distribution: Business-Travel-OTA
gitpan-cpan-version:      0.53
gitpan-cpan-path:         SPADKINS/Business-Travel-OTA-0.53.tar.gz
gitpan-cpan-author:       SPADKINS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,11 @@
 # CHANGE LOG
 #############################################################################
 
+VERSION 0.53
+ x began documentation in more of the files
+ x added installguide.pod and installguide/win32.pod
+ x added ability to send and receive arbitrary messages
+
 VERSION 0.52
  x add SOAP client and server (passing OTA messages as parameters, not attachments)
  x began documentation in more of the files
