--- a/TODO
+++ b/TODO
@@ -1,26 +1,30 @@
 ######################################################################
-## File: $Id: TODO,v 1.2 2005/05/20 13:24:40 spadkins Exp $
+## File: $Id: TODO,v 1.3 2005/09/19 02:55:48 spadkins Exp $
 ######################################################################
 
 These items are what will be required to go to version 1.0
  o program servers to respond with intelligent messages, not just OTA_PingRS
- o add message creation helper classes
- o get mailing lists set up on Sourceforge
+ o add message creation helper classes so that otaclient can send any message
+   or sequence of messages
  o sort out how to catch error messages and report them correctly
    (fatalsToBrowser in otaserver is not right)
 
-These are other interesting things which I might do
+These are other interesting things that I might do
  o add app.conf autoconfiguration on install
  o add a persistent HTTP server (Net::Server? HTTP::Daemon?)
  o add tests for (1) compression, (2) keep-alive
+ o add bulk (asynchronous) transmission in line with the HTTP transport spec
  o create a Toolset class for different XML toolsets
  o create Xerces, LibXML, etc. Toolsets
  o create App::Build::Xerces, App::Build::LibXML, etc.
- o do benchmarks for different Toolsets (parse, validate, XPath, creation)
- o add validation
+ o do benchmarks (parsing, validation, creation, manipulation [subst/XPath])
+ o add XML validation tool
+ o add XML validation in the server
  o write documentation
  o create a web-based client
  o investigate WSDL tools
  o add schema-flattening tool
  o add support for usage profiles (validate that a schema is within another schema)
+ o write a customer demand simulator to be able to stress-test and benchmark servers
+ o create a standard server benchmark
 
