--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 ######################################################################
-## File: $Id: TODO,v 1.3 2005/09/19 02:55:48 spadkins Exp $
+## File: $Id: TODO,v 1.4 2006/12/08 20:22:43 spadkins Exp $
 ######################################################################
+
+These items are things I need to work on
+ o tweak the verbose levels
+
+WARNING: Items below this line are out of date and need reconsideration
 
 These items are what will be required to go to version 1.0
  o program servers to respond with intelligent messages, not just OTA_PingRS
@@ -8,6 +13,7 @@ These items are what will be required to go to version 1.0
    or sequence of messages
  o sort out how to catch error messages and report them correctly
    (fatalsToBrowser in otaserver is not right)
+ o add pretty-printing of XML
 
 These are other interesting things that I might do
  o add app.conf autoconfiguration on install
